<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/cleaneat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15.7dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="444dp"
                android:background="@drawable/white_cueve_bg" />


            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20.7dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/SIGNUP"
                    android:textColor="#030303"
                    android:textSize="31.3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Username"
                    android:textColor="#c2c2c2"
                    android:textSize="13.3sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginRight="44.3dp"
                    android:background="#d5d5d5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Email"
                    android:textColor="#c2c2c2"
                    android:textSize="13.3sp" />

                <EditText
                    android:id="@+id/emails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginRight="44.3dp"
                    android:background="#d5d5d5" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30.3dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/Password"
                    android:textColor="#c2c2c2"
                    android:textSize="13.3sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:paddingEnd="44.3dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="6.3dp"
                    android:layout_marginRight="44.3dp"
                    android:background="#d5d5d5" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="30dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="50dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/signup"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:src="@drawable/black_arrow" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/Alreadyaccount"
                android:textColor="#0228FF"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>